added second project

--- a/sajakBasnet/sajak.ipynb
+++ b/sajakBasnet/sajak.ipynb
@@ -115,33 +115,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JOURNAL MENUE:\n",
-      "1. Write a new journal entry\n",
-      "2. Read a previous journal entry\n",
-      "3. Exit\n",
-      "Avainlabe journal entries: \n",
-      "2024-08-11.txt\n",
-      "Journal entry for 2024-08-11.txt:\n",
-      "dghbfiusrgiuerghfiuerghierghbeirbgveirpgberipgvberivbiruvbeprv\n",
-      "vbewivbreiufbvierbvierbvrevbre\n",
-      "\n",
-      "JOURNAL MENUE:\n",
-      "1. Write a new journal entry\n",
-      "2. Read a previous journal entry\n",
-      "3. Exit\n",
-      "Write more fuckingg journall!!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#project2\n",
+    "import os\n",
+    "from datetime import datetime, timedelta\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def current_date():\n",
+    "    return(datetime.now().strftime('%Y-%m-%d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_read_data_file(filename,mode, temp='', humidity='', conditions=''):\n",
+    "    today_date = current_date()\n",
+    "    if mode == 'w':\n",
+    "        with open(filename, mode) as file:\n",
+    "            file.write(f\"Temperature: {temp}°C\\n\")\n",
+    "            file.write(f\"Humidity: {humidity}%\\n\")\n",
+    "            file.write(f\"Conditions: {conditions}\\n\")\n",
+    "            \n",
+    "        print(f\"Weather data saved as {filename}\")\n",
+    "        file.close()\n",
+    "            \n",
+    "\n",
+    "    else:\n",
+    "        with open(filename, mode) as file:\n",
+    "            content = file.read()\n",
+    "        print(f\"Weather data for {filename}:\")\n",
+    "        print(content)\n",
+    "        file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def record_weatherr_date():\n",
+    "    mode = 'w'\n",
+    "    today_date = current_date()\n",
+    "    filename = f\"{today_date}.txt\"\n",
+    "\n",
+    "    print(\"Enter today's weather data: \")\n",
+    "    temperature = input(\"Temperature (°C): \")\n",
+    "    humidity = input(\"Humidity (%): \")\n",
+    "    conditions = input(\"Conditions (e.g., sunny, rainy): \")\n",
+    "\n",
+    "    write_read_data_file(filename,mode, temperature, humidity, conditions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def view_weathere_data():\n",
+    "    mode = 'r'\n",
+    "    files = [f for f in os.listdir() if f.endswith('.txt')]\n",
+    "\n",
+    "    if not files:\n",
+    "        print(\"No weather data found!!\")\n",
+    "        return\n",
+    "    \n",
+    "    print(\"Available weather data: \")\n",
+    "    for file in files:\n",
+    "        print(file)\n",
+    "\n",
+    "    selected_file = input(\"Enter the filename of the weather data you want to view: \")\n",
+    "\n",
+    "    if selected_file not in files:\n",
+    "        print(\"file not foundd\")\n",
+    "        return\n",
+    "    \n",
+    "    #read and display (how to do haha use fuckingg functionn)\n",
+    "    write_read_data_file(selected_file, mode)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_weekly_trends():\n",
+    "    today = datetime.now().date()\n",
+    "    week_ago = today - timedelta(days=7)\n",
+    "    \n",
+    "    total_temperature = 0\n",
+    "    count = 0\n",
+    "    \n",
+    "    files = [f for f in os.listdir() if f.endswith('.txt')]\n",
+    "    \n",
+    "    if not files:\n",
+    "        print(\"No weather data found.\")\n",
+    "        return\n",
+    "    \n",
+    "    for file in files:\n",
+    "        file_date = datetime.strptime(file.replace('.txt', ''), '%Y-%m-%d').date()\n",
+    "        \n",
+    "        if week_ago <= file_date <= today: #only files from the last week\n",
+    "            with open(file, 'r') as f:\n",
+    "                lines = f.readlines()\n",
+    "                for line in lines:\n",
+    "                    if line.startswith(\"Temperature:\"):\n",
+    "                        temperature_line = line  # The temperature line is identifiead\n",
+    "                        break\n",
+    "                temperature = float(temperature_line.split(\": \")[1].replace('°C', '').strip())\n",
+    "                total_temperature += temperature\n",
+    "                count += 1\n",
+    "    \n",
+    "    if count > 0:\n",
+    "        average_temperature = total_temperature / count\n",
+    "        print(f\"Average temperature over the last week: {average_temperature:.2f}°C\")\n",
+    "    else:\n",
+    "        print(\"No weather data found for the last week.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    while True:\n",
+    "        print(\"WEATHER APPLICATION:\")\n",
+    "        print(\"1. Record today's weather data\")\n",
+    "        print(\"2. View past weather data\")\n",
+    "        print(\"3. Display weekly trends\")\n",
+    "        print(\"4. Exit\")\n",
+    "        \n",
+    "        choice = input(\"Choose an option (1/2/3/4): \")\n",
+    "        \n",
+    "        if choice == '1':\n",
+    "            record_weatherr_date()\n",
+    "        elif choice == '2':\n",
+    "            view_weathere_data()\n",
+    "        elif choice == '3':\n",
+    "            calculate_weekly_trends()\n",
+    "        elif choice == '4':\n",
+    "            print(\"Goodbye!\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please choose 1, 2, 3, or 4.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
     "    main()"
    ]
   },
@@ -150,9 +302,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#project2\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
