--- a/homework.ipynb
+++ b/homework.ipynb
@@ -98,10 +98,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Journal entry saved to 2024-08-11.txt\n",
+      "Available journal entries:\n",
+      "2024-08-11.txt\n",
+      "\n",
+      "Contents of 2024-08-11.txt:\n",
+      "dfd\n",
+      "Available journal entries:\n",
+      "2024-08-11.txt\n",
+      "No journal entry found for the selected date.\n",
+      "Exiting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def create_journal_entry():\n",
+    "    # Get the current date in yyyy-mm-dd format\n",
+    "    current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "    # Get the journal entry from the user\n",
+    "    entry = input(\"Write your journal entry for today:\\n\")\n",
+    "    \n",
+    "    # Save the entry to a file named with the current date\n",
+    "    with open(f\"{current_date}.txt\", 'w') as file:\n",
+    "        file.write(entry)\n",
+    "    \n",
+    "    print(f\"Journal entry saved to {current_date}.txt\")\n",
+    "\n",
+    "def read_previous_entries():\n",
+    "    # List all journal files in the current directory\n",
+    "    try:\n",
+    "        # Get the list of files in the current directory\n",
+    "        files = [f\"{datetime.now().strftime('%Y-%m-%d')}.txt\"]\n",
+    "        # Display the list of available journal entries\n",
+    "        print(\"Available journal entries:\")\n",
+    "        for file in files:\n",
+    "            print(file)\n",
+    "        \n",
+    "        # Prompt the user to select a file\n",
+    "        selected_date = input(\"Enter the date of the journal entry you want to read (yyyy-mm-dd): \")\n",
+    "        selected_file = f\"{selected_date}.txt\"\n",
+    "        \n",
+    "        # Read and display the content of the selected file\n",
+    "        try:\n",
+    "            with open(selected_file, 'r') as file:\n",
+    "                content = file.read()\n",
+    "                print(f\"\\nContents of {selected_file}:\")\n",
+    "                print(content)\n",
+    "        except FileNotFoundError:\n",
+    "            print(\"No journal entry found for the selected date.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "def main():\n",
+    "    while True:\n",
+    "        choice = input(\"Enter your choice: \")\n",
+    "        \n",
+    "        if choice == '1':\n",
+    "            create_journal_entry()\n",
+    "        elif choice == '2':\n",
+    "            read_previous_entries()\n",
+    "        elif choice == '3':\n",
+    "            print(\"Exiting...\")\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please select 1, 2, or 3.\")\n",
+    "\n",
+    "main()\n"
+   ]
   }
  ],
  "metadata": {
